--- a/style.css
+++ b/style.css
@@ -18,3 +18,53 @@
     padding: 9px 25px;
     cursor: pointer;
 }
+
+.c1, .c2, .c3{
+    padding: 10px 30px;
+    border-radius: 10px;
+}
+
+.c1{
+    background-color: orange;
+}
+
+.c2{
+    background-color: orchid;
+}
+
+.c3{
+   background-color: blue; 
+}
+
+.categories h1{
+    color: white;
+}
+
+.categories img{
+    width: 100px;
+}
+
+.card{
+    border: none;
+    border-radius: 10px;
+    box-shadow: 5px 5px 10px lightgray;
+}
+
+.card-footer{
+    background-color: white;
+    border-top: none;
+}
+
+#subscribe{
+    height: 300px;
+}
+h6{
+    color: gray;
+}
+
+.container{
+    padding: 50px;
+}
+footer{
+    text-align: center;
+}
